--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
     <title>Тестовое задание для html-верстальщика</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <ul class="tabs"></ul>
+    <ul class="content"></ul>
+    <script src="js/main.js"></script>
+  </body>
 </html>
