--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <ul class="tabs"></ul>
-    <ul class="content"></ul>
+    <div class="container">
+      <ul class="tabs"></ul>
+      <ul class="content"></ul>
+    </div>
     <script src="js/main.js"></script>
   </body>
 </html>
